# traveling_assistant

./: .gitignore  CMakeLists.txt  doc_config.conf
TravelingAssistant/: PositionPoint.h  TravelWay.cpp  TravelWay.h  VehicleType.h  main.cpp
TravelingAssistant/test/: TravelingAssistantTest.h
doc/: doc_config.conf
travelingAssistant/: CMakeLists.txt  TravelWay.cpp  TravelWay.h  TravelingAssistant.h  main.cpp
travelingAssistant/test/: CMakeLists.txt  TravelingAssistantTest.cpp
